COMPLETED 10 01 09 add date of approval meeting to concept, hosted_on_c4.com, subject_to_tx,using_video
COMPLETED 10 01 09 add budget name to concept
COMPLETED 10 01 09 add objectives to concept
COMPLETED 10 01 09 add background to concept
COMPLETED 10 01 09 add traffic estimates to concept
COMPLETED 10 01 09 add revenue estimates to concept
COMPLETED 10 01 09 add moderation requirement to concept
COMPLETED 10 01 09 paginate concepts
COMPLETED 10 01 09 changelog email set up
COMPLETED 14 01 09 tidy up form styling
COMPLETED 14 01 09 intial dpeloyment recipe
COMPLETED 15 01 09 add team roles to user
COMPLETED 15 01 09 added is_approver role to user
COMPLETED 15 01 09 changes to dashboard to only show pending approval concepts
COMPLETED 16 01 09 add moderation requirement tickbox to form
COMPLETED 23 01 09 added paperclipping attachments (works with doc files and jpegs, not pdfs so far)
COMPLETED 23 01 09 add POC, budget stuff, mod requirements, estimates for traffic and revenue to concept form
COMPLETED 23 01 09 add SMTP server details into mailer
COMPLETED 23 01 09 comments styled different by approval group users
COMPLETED 28 01 09 added filters to concepts index



----deployment tasks
TODO logging chores into a runner script
TODO write backup scripts once tested
TODO change root of routes to be 'concept-tracker'



----views
TODO convert destructive links to post requests
TODO resource cross charging form for concepts
TODO add poge for concept process diagram
TODO tidy up departmental checklist div

TODO create PDF of concept on creation
TODO add saving form data in chunks
TODO search page for concepts; filters by user


----models
TODO add supplier model
TODO add suppliers to concept
TODO calculated total resource days for concept


----mailings
TODO mail: reminders to all user group for new concept submissions
TODO html version of mailer

----reports
TODO create reports page that sends out mailers
TODO create pdf reports
