@@ -1,9 +1,7 @@
 class AdminController < ApplicationController
   def dashboard
     @users = User.find(:all, :order => 'login DESC')
-    @concepts_awaiting_approval = Concept.find(:all, 
-                                              :conditions => ['status = ?', "Pending Approval"], 
-                                              :order => 'created_at DESC', :limit => 10)
+    @concepts_awaiting_approval = Concept.unapproved
   end
 
   def users
