@@ -4,16 +4,28 @@
 		<th>Name</th>
 		<th>Team</th>
 		<th>Admin?</th>
+		<th>Approver?</th>
 		<th>Projects</th>
 	</tr>
 	<% if !@users.blank? %>
 	  <% for user in @users %>
 	    
-	    	<tr>
-				<td><%= link_to user.login, user_path(user) %></td>
-				<td><%= user.team %></td>
-				<td><%= user.is_admin? ? "Y" : "N" %></td>
-				<td><%= user.concepts.size %></td>
+			<tr class="<%= cycle("even", "odd") -%>">
+				<td class="first"><%= link_to user.login, user_path(user) %></td>
+				<td class="first"><%= user.team %></td>
+				<% if current_user.is_admin? %>
+					<% if user.is_admin? %>
+					<td class="wide"><%= link_to('Remove from Admins', {:action => 'remove_from_admin', :controller => 'users', :id => user}, :method => 'post') %></td>
+					<% else %>
+					<td class="wide"><%= link_to('Add to Admins', {:action => 'add_to_admin', :controller => 'users', :id => user}, :method => 'post') %></td>
+					<% end -%>
+					<% if user.is_approver? %>
+					<td class="wide"><%= link_to('Remove from Approvers', {:action => 'remove_from_approvers', :controller => 'users', :id => user}, :method => 'post') %></td>
+					<% else %>
+					<td class="wide"><%= link_to('Add to Approvers', {:action => 'add_to_approvers', :controller => 'users', :id => user}, :method => 'post') %></td>				
+					<% end -%>
+				<% end -%>
+				<td class="narrow"><%= user.concepts.size %></td>
 			</tr>
 
 	  <% end %>
